[package]
name = "gl-graphic"
version = "0.1.0"
authors = ["win"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphic-core = {path="../graphic-core"}

[dependencies.sdl2]
version = "*"
default-features = false
#features = ["bundled", "static-link"]

